--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,8 +2,6 @@
 name: Node.js CI
 
 on:
-  push:
-    branches: [ main ]
   pull_request:
     branches: [ main ]
 
@@ -18,9 +16,9 @@ jobs:
       uses: actions/setup-node@v2
       with:
         node-version: '20.x'
-    - run: npm ci
-    - run: npm run build --if-present
+    - run: npm ci --prefix services/core
+    - run: npm run build --if-present --prefix services/core
     - name: Run Jest Test Suite
-      run: npm test
+      run: npm test --prefix services/core
       env:
         CI: true
