--- a/services/core/package.json
+++ b/services/core/package.json
@@ -12,7 +12,14 @@
     "zip": "rm -f function-source.zip && zip -r ../../function-source.zip package.json lib"
   },
   "dependencies": {
-    "@google-cloud/functions-framework": "^3.3.0",
-    "jest": "^29.7.0"
+    "@google-cloud/functions-framework": "^3.3.0"
+  },
+  "devDependencies": {
+    "@types/jest": "^29.5.12",
+    "@types/supertest": "^6.0.2",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.2",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3"
   }
 }
