--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,13 +5,13 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "type": "node",
+            "type": "node-terminal",
             "request": "launch",
-            "name": "Launch Program",
+            "name": "Core",
             "skipFiles": [
                 "<node_internals>/**"
             ],
-            "program": "${file}"
+            "command": "npm run start-local nodemon --prefix services/core"
         },
         {
             "name": "Github Action Test",
