--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,8 @@
 {
     "files.exclude": {
         "**/.git": false
+    },
+    "editor.codeActionsOnSave": {
+        "source.fixAll.eslint": "always"
     }
 }
