--- a/services/core/package.json
+++ b/services/core/package.json
@@ -8,16 +8,22 @@
   },
   "scripts": {
     "start": "functions-framework --target=helloWorld",
+    "start-local": "nodemon",
+    "start-ts-node": "ts-node src/index.ts",
     "test": "jest --config jest.config.ts",
     "zip": "rm -f function-source.zip && zip -r ../../function-source.zip package.json lib"
   },
   "dependencies": {
-    "@google-cloud/functions-framework": "^3.3.0"
+    "@google-cloud/functions-framework": "^3.3.0",
+    "express": "^4.18.2"
   },
   "devDependencies": {
     "@types/jest": "^29.5.12",
+    "@types/node": "^20.11.17",
     "@types/supertest": "^6.0.2",
     "jest": "^29.7.0",
+    "nodemon": "^3.0.3",
+    "supertest": "^6.3.4",
     "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
