--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,37 +1,14 @@
 {
-    "extends": ["eslint:recommended", "prettier"],
-    "plugins": ["filenames", "react-hooks", "prettier"],
-    "rules": {
-    "filenames/no-index": "warn",
-    "import/no-extraneous-dependencies": "warn",
-    "import/order": [
-      "warn",
-      {
-        "newlines-between": "always"
-      }
+    "parser": "@typescript-eslint/parser",
+    "extends": [
+        "plugin:@typescript-eslint/recommended"
     ],
-    "no-case-declarations": "warn",
-    "no-console": "warn",
-    "no-debugger": "warn",
-    "no-else-return": "warn",
-    "no-extra-semi": 2,
-    "no-param-reassign": "warn",
-    "no-undef": "off",
-    "no-useless-return": "warn",
-    "arrow-body-style": "warn",
-    "no-unneeded-ternary": "error",
-    "no-unused-vars": ["error", { "args": "none" }],
-    "no-var": "warn",
-    "object-shorthand": "warn",
-    "prefer-const": "warn",
-    "max-lines": ["warn", { "skipBlankLines": true, "skipComments": true }],
-    "id-length": ["warn", { "properties": "never" }],
-    "prefer-destructuring": ["warn", { "object": true }],
-    "prefer-template": "warn",
-    "react-hooks/exhaustive-deps": "off",
-    "camelcase": "off",
-    "curly": ["warn", "all"],
-    "yoda": "warn",
-    "semi": [2, "always"]
-  }
+    "parserOptions": {
+        "ecmaVersion": 2022,
+        "sourceType": "module"
+    },
+    "rules": {
+        "quotes": [2, "single"],
+        "semi": "error"
+    }
 }
