--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,9 +16,8 @@ jobs:
       uses: actions/setup-node@v2
       with:
         node-version: '20.x'
-    - run: npm ci --prefix services/core
-    - run: npm run build --if-present --prefix services/core
+    - run: npm ci && npm ci --prefix services/core
     - name: Run Jest Test Suite
-      run: npm test --prefix services/core
+      run: npm test
       env:
         CI: true
