--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,5 +1,5 @@
 # Run all tests for all services/packages
-name: Node.js CI
+name: Tests
 
 on:
   pull_request:
@@ -16,8 +16,8 @@ jobs:
       uses: actions/setup-node@v2
       with:
         node-version: '20.x'
-    - run: npm ci && npm ci --prefix services/core
-    - name: Run Jest Test Suite
-      run: npm test
-      env:
-        CI: true
+    # - run: npm ci && npm ci --prefix services/core
+    # - name: Run Jest Test Suite
+    #   run: npm test
+    #   env:
+    #     CI: true
