--- a/.github/workflows/terraform-plan.yml
+++ b/.github/workflows/terraform-plan.yml
@@ -8,6 +8,7 @@ env:
   TF_API_TOKEN: "${{ secrets.TERRAFORM_API_TOKEN }}"
   TF_WORKSPACE: "postrix"
   CONFIG_DIRECTORY: "./terraform"
+  GOOGLE_CREDENTIALS: ${{ secrets.GCP_SERVICE_ACCOUNT_KEY }}
 
 jobs:
   terraform:
