--- a/.github/workflows/terraform-apply.yml
+++ b/.github/workflows/terraform-apply.yml
@@ -12,7 +12,7 @@ env:
   CONFIG_DIRECTORY: "./terraform"
 
 jobs:
-  terraform:
+  terraform-apply:
     name: "Terraform Apply"
     runs-on: ubuntu-latest
     permissions:
