--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,7 +6,7 @@ on:
     branches: [ main ]
 
 jobs:
-  build:
+  test:
 
     runs-on: ubuntu-latest
 
@@ -16,8 +16,8 @@ jobs:
       uses: actions/setup-node@v2
       with:
         node-version: '20.x'
-    # - run: npm ci && npm ci --prefix services/core
-    # - name: Run Jest Test Suite
-    #   run: npm test
-    #   env:
-    #     CI: true
+    - run: npm ci && npm ci --prefix services/core
+    - name: Run Jest Test Suite
+      run: npm test
+      env:
+        CI: true
