--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,7 +24,7 @@ jobs:
 
     - name: Build Docker image
       run: |
-        docker build -t us-central1-docker.pkg.dev/postrix/production-docker/core:latest .
+        docker build -t us-central1-docker.pkg.dev/postrix/production-docker/core:latest ./services/core
 
     - name: Push Docker image to Google Artifact Registry
       run: |
