--- a/services/core/package.json
+++ b/services/core/package.json
@@ -7,10 +7,11 @@
     "node": "20"
   },
   "scripts": {
-    "start-local": "ts-node src/index.ts",
+    "start-local": "ENV=local ts-node src/index.ts",
     "start-server": "ts-node --transpileOnly src/index.ts"
   },
   "dependencies": {
+    "dotenv": "^16.4.5",
     "express": "^4.18.2"
   }
 }
