--- a/.github/workflows/adhoc.yml
+++ b/.github/workflows/adhoc.yml
@@ -38,4 +38,5 @@ jobs:
         --image=$REGION-docker.pkg.dev/postrix-development/development-docker/${{ github.ref }}-core:latest \
         --region=$REGION \
         --platform=managed \
-        --allow-unauthenticated
+        --allow-unauthenticated \
+        --set-env-vars=ENV=development
