--- a/.github/workflows/adhoc.yml
+++ b/.github/workflows/adhoc.yml
@@ -39,4 +39,4 @@ jobs:
         --region=$REGION \
         --platform=managed \
         --allow-unauthenticated \
-        --set-env-vars=ENV=development
+        --env-vars-file=./services/core/envs/dev.env
