Added scheduled cleanup

--- a/.github/workflows/adhoc.yml
+++ b/.github/workflows/adhoc.yml
@@ -40,3 +40,4 @@ jobs:
         --platform=managed \
         --allow-unauthenticated \
         --env-vars-file=./services/core/envs/dev.env
+        --labels=adhoc=true
