--- a/.github/workflows/adhoc.yml
+++ b/.github/workflows/adhoc.yml
@@ -26,16 +26,16 @@ jobs:
 
     - name: Build Docker image
       run: |
-        docker build -t $REGION-docker.pkg.dev/postrix-development/development-docker/${{ github.ref }}-core:latest ./services/core
+        docker build -t $REGION-docker.pkg.dev/postrix-development/development-docker/${{ env.BRANCH_NAME }}-core:latest ./services/core
 
     - name: Push Docker image to Google Artifact Registry
       run: |
-        docker push $REGION-docker.pkg.dev/postrix-development/development-docker/${{ github.ref }}-core:latest
+        docker push $REGION-docker.pkg.dev/postrix-development/development-docker/${{ env.BRANCH_NAME }}-core:latest
     
     - name: Deploy to Cloud Run
       run: |
         gcloud run deploy ${{ env.BRANCH_NAME }}-core-service \
-        --image=$REGION-docker.pkg.dev/postrix-development/development-docker/${{ github.ref }}-core:latest \
+        --image=$REGION-docker.pkg.dev/postrix-development/development-docker/${{ env.BRANCH_NAME }}-core:latest \
         --region=$REGION \
         --platform=managed \
         --allow-unauthenticated \
