--- a/.github/workflows/adhoc.yml
+++ b/.github/workflows/adhoc.yml
@@ -41,3 +41,7 @@ jobs:
         --allow-unauthenticated \
         --env-vars-file=./services/core/envs/dev.env \
         --labels=adhoc=true
+    
+    - name: Map adhoc url to service
+      run: |
+        gcloud run domain-mappings create --service ${{ env.BRANCH_NAME }}-core-service --domain ${{ env.BRANCH_NAME }}-core.dev.postrix.io
