Added region to command

--- a/.github/workflows/adhoc.yml
+++ b/.github/workflows/adhoc.yml
@@ -47,4 +47,4 @@ jobs:
     
     - name: Map adhoc url to service
       run: |
-        gcloud beta run domain-mappings create --service ${{ env.BRANCH_NAME }}-core-service --domain ${{ env.BRANCH_NAME }}-core.dev.postrix.io
+        gcloud beta run domain-mappings create --service ${{ env.BRANCH_NAME }}-core-service --domain ${{ env.BRANCH_NAME }}-core.dev.postrix.io --region $REGION
