--- a/.github/workflows/adhoc.yml
+++ b/.github/workflows/adhoc.yml
@@ -49,8 +49,8 @@ jobs:
       id: brach-url
       uses: efiShtain/urlify-string@v1.1
       with:
-        string: ${{ env.BRANCH_NAME }}.core.dev.postrix.io
+        string: ${{ env.BRANCH_NAME }}
     
     - name: Map adhoc url to service
       run: |
-        gcloud beta run domain-mappings create --service ${{ env.BRANCH_NAME }}-core-service --domain ${{ steps.brach-url.outputs.urlified-string }} --region $REGION
+        gcloud beta run domain-mappings create --service ${{ env.BRANCH_NAME }}-core-service --domain ${{ steps.brach-url.outputs.urlified-string }}.core.dev.postrix.io --region $REGION
