Added some compsite actions

--- a/.github/workflows/destroy.yml
+++ b/.github/workflows/destroy.yml
@@ -19,14 +19,11 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v3
 
-    - name: Set up Cloud SDK
-      uses: google-github-actions/setup-gcloud@v0.3.0
+    - uses: ./.github/actions/gcp-warm-up
       with:
-        service_account_key: ${{ secrets.GCP_SERVICE_ACCOUNT_KEY }}
         project_id: postrix-development
-
-    - name: Install gcloud beta components
-      run: gcloud components install beta
+        region: ${{ env.REGION }}
+        gcloud-beta-components: true
 
     - name: Destroy resources
       run: |
