--- a/.github/workflows/adhoc.yml
+++ b/.github/workflows/adhoc.yml
@@ -15,17 +15,12 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v3
 
-    - name: Set up Cloud SDK
-      uses: google-github-actions/setup-gcloud@v0.3.0
+    - uses: ./.github/actions/gcp-warm-up
       with:
-        service_account_key: ${{ secrets.GCP_SERVICE_ACCOUNT_KEY }}
         project_id: postrix-development
-
-    - name: Install gcloud beta components
-      run: gcloud components install beta
-
-    - name: Configure Docker for Google Artifact Registry
-      run: gcloud auth configure-docker $REGION-docker.pkg.dev
+        region: ${{ env.REGION }}
+        configure-docker: true
+        gcloud-beta-components: true
 
     - name: Build Docker image
       run: |
