--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,15 +22,12 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v3
 
-    - name: Set up Cloud SDK
-      uses: google-github-actions/setup-gcloud@v0.3.0
+    - uses: ./.github/actions/gcp-warm-up
       with:
-        service_account_key: ${{ secrets.GCP_SERVICE_ACCOUNT_KEY }}
-        project_id: ${{ matrix.environment.project_id }}
-
-    - name: Configure Docker for Google Artifact Registry
-      run: gcloud auth configure-docker $REGION-docker.pkg.dev
-
+        project_id: postrix-development
+        region: ${{ env.REGION }}
+        configure-docker: true
+        
     - name: Build Docker image
       run: |
         docker build -t $REGION-docker.pkg.dev/${{ matrix.environment.project_id }}/${{ matrix.environment.artifact_repo }}/core:latest ./services/core
