--- a/.github/workflows/scheduled-cleanup.yml
+++ b/.github/workflows/scheduled-cleanup.yml
@@ -19,6 +19,8 @@ jobs:
         with:
           project_id: postrix-development
           region: ${{ env.REGION }}
+        env:
+          GCP_SERVICE_ACCOUNT_KEY: ${{ secrets.GCP_SERVICE_ACCOUNT_KEY }}
 
       - name: Delete expired deployments
         run: |
