--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,7 +24,7 @@ jobs:
 
     - uses: ./.github/actions/gcp-warm-up
       with:
-        project_id: ${{ matrix.environment.name }}
+        project_id: ${{ matrix.environment.project_id }}
         region: ${{ env.REGION }}
         configure-docker: true
       env:
