--- a/.github/workflows/destroy.yml
+++ b/.github/workflows/destroy.yml
@@ -40,6 +40,6 @@ jobs:
 
     - name: Delete domain mapping
       run: |
-        if gcloud beta run domain-mappings describe --domain ${{ steps.brach-url.outputs.urlified-string }}.core.dev.postrix.io --region $REGION; then
-          gcloud beta run domain-mappings delete --domain ${{ steps.brach-url.outputs.urlified-string }}.core.dev.postrix.io --region $REGION
+        if gcloud beta run domain-mappings describe --domain ${{ steps.brach-url.outputs.urlified-string }}-core.dev.postrix.io --region $REGION; then
+          gcloud beta run domain-mappings delete --domain ${{ steps.brach-url.outputs.urlified-string }}-core.dev.postrix.io --region $REGION
         fi
