Added terraform comment pr typescript custom action

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -17,7 +17,7 @@
             }
         },
         {
-            "name": "Action Test",
+            "name": "GHA: Test",
             "type": "node-terminal",
             "request": "launch",
             "command": "act -j test",
@@ -27,11 +27,23 @@
             }
         },
         {
-            "name": "Action Plan",
+            "name": "GHA: Plan",
             "type": "node-terminal",
             "request": "launch",
             "command": "act -j terraform-plan",
             "internalConsoleOptions": "neverOpen",
+            "presentation": {
+                "group": "Github Actions"
+            }
+        },
+        {
+            "name": "GHA: Typescript",
+            "type": "node-terminal",
+            "request": "launch",
+            "command": "ts-node ${file}",
+            "env": {
+                // "INPUT_RUN_LINK": "https://app.terraform.io/app/postrix/workspaces/postrix/runs/run-8ggL4H2QSHk77WQY"
+            },
             "presentation": {
                 "group": "Github Actions"
             }
