--- a/.github/actions/terraform-comment-pr/tsconfig.json
+++ b/.github/actions/terraform-comment-pr/tsconfig.json
@@ -1,10 +1,11 @@
 {
     "compilerOptions": {
-        "target": "ES2021",
+        "target": "ES2019",
         "module": "commonjs",
-        "strict": true,
+        "outDir": "dist",
         "esModuleInterop": true,
-        "skipLibCheck": true,
-        "forceConsistentCasingInFileNames": true
+        "forceConsistentCasingInFileNames": true,
+        "strict": true,
+        "skipLibCheck": true
     }
 }
