--- a/.github/actions/terraform-comment-pr/package.json
+++ b/.github/actions/terraform-comment-pr/package.json
@@ -12,5 +12,9 @@
   "dependencies": {
     "@actions/core": "^1.10.1",
     "@actions/github": "^6.0.0"
+  },
+  "devDependencies": {
+    "@types/node": "^20.14.2",
+    "typescript": "^5.4.5"
   }
 }
