--- a/.github/workflows/adhoc.yml
+++ b/.github/workflows/adhoc.yml
@@ -19,8 +19,8 @@ jobs:
       with:
         project_id: postrix-development
         region: ${{ env.REGION }}
-        configure-docker: true
-        gcloud-beta-components: true
+        configure_docker: true
+        install_components: beta
       env:
         GCP_SERVICE_ACCOUNT_KEY: ${{ secrets.GCP_SERVICE_ACCOUNT_KEY }}
 
