--- a/.github/workflows/adhoc.yml
+++ b/.github/workflows/adhoc.yml
@@ -51,5 +51,5 @@ jobs:
     - name: Map adhoc url to service
       run: |
         if ! gcloud beta run domain-mappings describe --domain ${{ steps.brach-url.outputs.urlified-string  }}-core.dev.postrix.io --region $REGION; then
-          gcloud beta run domain-mappings create --service ${{ env.BRANCH_NAME }}-core-service --domain ${{ steps.brach-url.outputs.urlified-string }}-core.dev.postrix.io --region $REGION
+          gcloud beta run domain-mappings create --service ${{ env.BRANCH_NAME }}-core-service --domain ${{ steps.brach-url.outputs.urlified-string }}-core.dev.postrix.io --region $REGION --quiet
         fi
