--- a/.github/actions/gcp-warm-up/action.yml
+++ b/.github/actions/gcp-warm-up/action.yml
@@ -14,16 +14,28 @@ inputs:
     default: 'false'
   install_components:
     description: 'What components to install'
+  workload_identity_provider:
+    description: 'The workload identity provider'
+    required: true
+  service_account:
+    description: 'The service account email for authentication'
+    required: true
   
 
 runs:
   using: 'composite'
   steps:
-    - name: Set up Cloud SDK
-      uses: google-github-actions/setup-gcloud@v0
+    - id: Google Authenticate
+      uses: 'google-github-actions/auth@v2'
       with:
-        service_account_key: ${{ env.GCP_SERVICE_ACCOUNT_KEY }}
-        project_id: ${{ inputs.project_id }}
+        workload_identity_provider: 'projects/123456789/locations/global/workloadIdentityPools/my-pool/providers/my-provider'
+        service_account: 'my-service-account@my-project.iam.gserviceaccount.com'
+
+    - name: Set up Cloud SDK
+      uses: google-github-actions/setup-gcloud@v2
+      with:
+        # service_account_key: ${{ env.GCP_SERVICE_ACCOUNT_KEY }}
+        # project_id: ${{ inputs.project_id }}
         install_components: ${{ inputs.install_components }}
 
     - name: Configure Docker for Google Artifact Registry
