added github actions style

--- a/.github/actions/gcp-warm-up/action.yml
+++ b/.github/actions/gcp-warm-up/action.yml
@@ -30,7 +30,7 @@ runs:
       with:
         workload_identity_provider: ${{ inputs.workload_identity_provider }}
         project_id: ${{ inputs.project_id }}
-        # service_account: ${{ inputs.service_account }}
+        service_account: ${{ inputs.service_account }}
 
     - name: Set up Cloud SDK
       uses: google-github-actions/setup-gcloud@v2
