--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,5 +10,9 @@
     "editor.detectIndentation": false,
     "[github-actions-workflow]": {
         "editor.tabSize": 2
+    },
+    "files.associations": {
+        "**/.github/**/*.yml": "github-actions-workflow",
+        "**/.github/**/*.yaml": "github-actions-workflow"
     }
 }
