--- a/.gitignore
+++ b/.gitignore
@@ -146,3 +146,7 @@ dist
 
 # Ignore lock file
 .terraform.lock.hcl
+
+# To create binaries, containers, pull requests, or other releases, add the following to your .gitignore, .dockerignore
+# and similar files to prevent accidentally committing credentials to your release artifact:
+gha-creds-*.json
