--- a/.github/workflows/destroy.yml
+++ b/.github/workflows/destroy.yml
@@ -22,10 +22,10 @@ jobs:
     - uses: ./.github/actions/gcp-warm-up
       with:
         project_id: postrix-development
+        workload_identity_provider: ${{ secrets.WORKLOAD_IDENTITY_PROVIDER }}
+        service_account: ${{ secrets.SERVICE_ACCOUNT }}
         region: ${{ env.REGION }}
         install_components: beta
-      env:
-        GCP_SERVICE_ACCOUNT_KEY: ${{ secrets.GCP_SERVICE_ACCOUNT_KEY }}
 
     - name: Destroy resources
       run: |
