--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -10,7 +10,7 @@ on:
       environment:
         required: true
         description: 'The environment to deploy to'
-        type: boolean
+        type: string
       service_name:
         required: true
         description: 'The name of the Cloud Run service to deploy'
